# livescribe

./: .gitignore  Cargo.toml  README.md  index.html  install.sh  live_transcribe.py  package-lock.json  package.json  requirements.txt  vite.config.js
.github/workflows/: release.yml
backend/: requirements.txt  transcription_server.py
scripts/: chatterbox_synth.py  dev.sh
src/: audio.rs  chatterbox.rs  dedup.rs  document.rs  main.js  main.rs  model.rs  output.rs  rewrite.rs  styles.css  transcribe.rs  tts.rs  voice.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
